Fixed horizontal scaling on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -27,7 +27,7 @@ nav.sticky {
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
-	width: 1200px;
+	width: 100%;
 	z-index: 10;
 	box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.1);
 }
@@ -111,7 +111,7 @@ html {
 body {
 	font-size: 16px;
 	font-family: sans-serif;
-	width: 1200px;
+	max-width: 1200px;
 	margin: 0 auto;
 }
 
